@@ -690,7 +690,7 @@ reconfig xconfig gconfig mconfig menuconfig config oldconfig:
 @CONFIG_RTAI_OLD_FASHIONED_BUILD_TRUE@	find . -name GNUmakefile -print0 | xargs -0 rm -f
 @CONFIG_RTAI_OLD_FASHIONED_BUILD_TRUE@        test -d $(top_builddir)/config/kconfig && \
 @CONFIG_RTAI_OLD_FASHIONED_BUILD_TRUE@	$(MAKE) -C $(srcdir)/config/kconfig \
-@CONFIG_RTAI_OLD_FASHIONED_BUILD_TRUE@	-f Makefile.kconfig distclean srctree=$(srcdir) || :
+@CONFIG_RTAI_OLD_FASHIONED_BUILD_TRUE@	-f Makefile.kconfig distclean srctree=$(srcdir) || : ; \
 @CONFIG_RTAI_OLD_FASHIONED_BUILD_TRUE@	find . -name autom4te.cache | xargs rm -fr
 @CONFIG_RTAI_OLD_FASHIONED_BUILD_FALSE@clean-local:
 @CONFIG_RTAI_OLD_FASHIONED_BUILD_FALSE@	rm -f .cfchanged
