@@ -2,6 +2,10 @@
 
  	* RELEASE: fusion-0.6
 
+2004-10-10  Philippe Gerum  <rpm@xenomai.org>
+
+	* GNUMakefile.am: Fix distclean-local for old fashion build.
+
 2004-10-09  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>
 
 	* GNUmakefiles.am building kernel modules : Force build of kernel
